# water_controller

./: .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
include/: utils.h
src/: freertos_callbacks.c  main.c  utils.c
